##Text encoding: utf-8

2016-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fix gcc-6/g++-6 warnings.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcr/gcrcrystalviewer.cc: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcugtk/chem3dwindow.cc: ditto.
	* libs/gcugtk/molecule.cc: ditto.
	* libs/gcugtk/spectrumdoc.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* programs/crystal/document.cc: ditto.

2016-03-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: avoid playing with scheme having different
	kind of arrows.
	* plugins/loaders/cdxml/cdxml.cc: ditto and don't duplicate atom symbols.

2016-03-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fix GetMaxLineHeight().
	* plugins/loaders/cdx/cdx.cc: import and export retrosynthesis.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/paint/arrows/retrosynthesis.cc: ditto.
	* plugins/paint/arrows/retrosynthesis.h: ditto.
	* plugins/paint/arrows/retrosynthesisarrow.cc: ditto.
	* plugins/paint/arrows/retrosynthesisarrow.h: ditto.
	* plugins/paint/arrows/retrosynthesisstep.cc: ditto.
	* plugins/paint/arrows/retrosynthesisstep.h: ditto.

2016-03-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: add Text::GetMaxLineHeight().
	* libs/gccv/text.h: ditto.
	* libs/gcp/fragment.cc: fix behavior after rotation.
	* libs/gcp/mesomer.cc: initialize member.
	* libs/gcp/text.cc: new text properties.
	* libs/gcp/text.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: save fragments and mesomery.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2016-03-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.h: Change gccv::Tag from enum to int (avods runtime
	errors).
	* libs/gcp/fragment.cc: enhance rotation and GetProperty () method.
	* libs/gcp/fragment.h: change Update () signature.