@@ -153,7 +153,9 @@ GtkWidget* View::CreateNewWidget ()
 	if (m_Canvas)
 		return m_Canvas->GetWidget ();
 	m_Canvas = new gccv::Canvas (this);
+#if !GTK_CHECK_VERSION(3,20,0)
 	m_Canvas->SetBackgroundColor (GO_COLOR_WHITE);
+#endif
 	m_pWidget = m_Canvas->GetWidget ();
 	m_Canvas->SetGap (3.); // FIXME: make this configurable
 	if (m_pWidget) {
